--- a/client/app/globals.css
+++ b/client/app/globals.css
@@ -69,6 +69,23 @@ body,
   --toastify-color-progress-bgo: .2
 }
 
+@keyframes fadeInUp {
+  0% {
+    opacity: 0;
+    transform: translateY(20px);
+  }
+  100% {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
+
+.fade-in-up {
+  animation: fadeInUp 0.8s ease-out forwards;
+}
+
+
+
 button,
 [role=button] {
   cursor: pointer
